# realestate-ai

./: .cursorignore  .gitignore  LICENSE  Quickstart.md  README.md  docker-compose.yml
.cursor/skills/fastapi/templates/: .env.example  pyproject.toml
.cursor/skills/fastapi/templates/src/: config.py  database.py  main.py
.cursor/skills/fastapi/templates/tests/: test_main.py
backend/: Dockerfile.api  Dockerfile.db  README.md  pyproject.toml  seed.bat
backend/scripts/: 01-roles.sql  02-schema.sql  03-seed.sql  init-db.bat  init-extensions.sql  test_upload_document.py  test_upload_image.py
backend/src/realtrust_api/: __init__.py  config.py  main.py
backend/src/realtrust_api/api/: __init__.py  deps.py
backend/src/realtrust_api/api/v1/: __init__.py  router.py
backend/src/realtrust_api/core/: __init__.py  audit.py  exceptions.py  storage.py
backend/src/realtrust_api/db/: __init__.py  session.py
backend/src/realtrust_api/domain/: __init__.py
backend/src/realtrust_api/domain/documents/: __init__.py  models.py  schemas.py
backend/src/realtrust_api/domain/escrow/: __init__.py  models.py  schemas.py
backend/src/realtrust_api/domain/events/: __init__.py  models.py  (+1 more)
backend/tests/: conftest.py  test_ai_insights.py  test_appraisals.py  test_chat.py  test_correlation_and_audit.py  test_documents.py  test_documents_rls.py  test_escrow.py  test_health.py  test_inspections.py  test_listings.py  test_map_search.py  test_milestone_gating.py  test_negative_proof_suite.py  test_offers.py  test_properties.py  test_properties_search_images.py  test_regulated_and_access_logging.py  test_showings.py  test_title.py  test_transactions.py  test_users_me.py  test_views_transactions.py
(+225 files in other folders)
